@@ -32,6 +32,8 @@ Stable versions
 	- add experimental DxF/DFx handling with volume slides in all frames
 	- add better Archimedes .arc compressed file test
 	- reverted to older YM3812 emulator for license compliance
+	- fix byte swap error in HSC to SBI Adlib OPL2 instrument conversion
+	- fix Reality Adlib tracker loader
 
 2.5.1 (20071207): 11 years after xmp 0.09a, the first public release!
 	- fix Winamp plugin default sampling rate (reported by Mirko Buffoni)
